Added working contextualization from local machine. Can be contextualized by running the command: python ssc-instance-userdata.py
The machine needs to be configured to run cloudinit contextualization.

--- a/Contextualization/instance.yml
+++ b/Contextualization/instance.yml
@@ -34,3 +34,4 @@ runcmd:
   - sudo pip install flask
   - sudp pip install jsonify
   - sudo git clone https://github.com/oliback/ACC2-BENCHOP.git
+  - cd /ACC2-BENCHOP/matlab/BENCHOP && sudo python restapi.py
